# DGTile

./: .buildinfo  CMakeLists.txt  LICENSE  README.md  config.cmake.in  dgt_amr.cpp  dgt_amr.hpp  dgt_ascii.cpp  dgt_base64.cpp  dgt_basis.cpp  dgt_basis.hpp  dgt_binary.cpp  dgt_block.cpp  dgt_block.hpp  dgt_border.cpp  dgt_border.hpp  dgt_defines.hpp  dgt_field.cpp  dgt_field.hpp  dgt_file.cpp  dgt_file.hpp  dgt_grid.cpp  dgt_grid.hpp  dgt_interp.hpp  dgt_interp_simd.hpp  dgt_library.cpp  dgt_library.hpp  dgt_marks.cpp  dgt_marks.hpp  dgt_mesh.cpp  dgt_mesh.hpp  dgt_message.hpp  dgt_point.hpp  dgt_print.hpp  dgt_spatial.hpp  dgt_tree.cpp  dgt_tree.hpp  dgt_views.hpp  dgt_vtk.cpp  genindex.html  (+4 more)
.doctrees/: environment.pickle  index.doctree
.doctrees/deployment/: dependencies.doctree  deployment.doctree
.doctrees/performance/: kernels.doctree  packing.doctree  performance.doctree
.doctrees/theory/: dg.doctree  theory.doctree  transfer.doctree  trees.doctree
.doctrees/usage/: usage.doctree
.github/workflows/: doc.yml
_sources/deployment/: dependencies.rst.txt  deployment.rst.txt
_sources/performance/: packing.rst.txt
_sources/theory/: theory.rst.txt
app/: .run.cpp.swp  CMakeLists.txt  app.hpp  hydro.cpp  hydro.hpp  hydro_bounds.cpp  hydro_dt.cpp  hydro_face_integral.cpp  hydro_fluxes.cpp  hydro_ics.cpp  hydro_volume_integral.cpp  hydro_vtk.cpp  input.lua  lua.cpp  main.cpp  passive.cpp  passive.hpp  passive_ics.cpp  passive_vtk.cpp  run.cpp  setup.cpp
app/inputs/: advection.lua  kelvin_helmholtz.lua
deployment/: dependencies.html  deployment.html
doc/: conf.py  dg.tex  dgtile.tex  index.rst  tree_global_ids.tex  tree_level_ids.tex  trees.tex
doc/deployment/: dependencies.rst  deployment.rst
doc/performance/: kernels.rst  performance.rst
doc/tex/: children.tex  tree_global_ids.tex  tree_level_ids.tex  tree_zcurve.tex  trees.tex
doc/theory/: dg.rst  theory.rst  transfer.rst  trees.rst
doc/usage/: usage.rst
ex/: CMakeLists.txt  advect_2D.in  advect_2D_amr.in  advect_3D.in  amr.cpp  hydro.cpp  hydro.hpp  ics.cpp  io.cpp  isentropic_vortex.in  limit.cpp  physics.cpp  rt.in  sod.in
performance/: kernels.html  packing.html  performance.html
src/: CMakeLists.txt  dgt_array.hpp  dgt_base64.cpp  dgt_base64.hpp  dgt_block_info.cpp  dgt_block_info.hpp  dgt_bounds.hpp  dgt_box3.hpp  dgt_cartesian.cpp  dgt_cartesian.hpp  dgt_conduit.cpp  dgt_conduit.hpp  dgt_defines.hpp  dgt_dg.cpp  dgt_dg.hpp  dgt_field.cpp  dgt_field.hpp  dgt_for_each.hpp  dgt_ghosting.cpp  dgt_ghosting.hpp  dgt_grid3.hpp  dgt_initialize.cpp  dgt_initialize.hpp  dgt_integrator.cpp  dgt_integrator.hpp  dgt_interpolate.hpp  dgt_lua.cpp  dgt_lua.hpp  dgt_lua_interface.cpp  dgt_lua_interface.hpp  dgt_macros.hpp  dgt_mesh.cpp  dgt_mesh.hpp  dgt_message.hpp  dgt_partitioning.cpp  dgt_partitioning.hpp  dgt_physics.hpp  dgt_print.cpp  dgt_print.hpp  dgt_reduce.hpp  (+14 more)
test/: CMakeLists.txt
test/example/: CMakeLists.txt  example.hpp  lua.cpp  main.cpp  physics.cpp  physics.hpp  run.cpp  setup.cpp  test.lua  vtk.cpp
test/integration/: CMakeLists.txt  basis.cpp  basis.lua  main.cpp  when.cpp  when.lua
test/performance/: CMakeLists.txt  packing.cpp
test/unit/: CMakeLists.txt  array.cpp  block_info.cpp  bounds.cpp  cartesian.cpp  conduit.cpp  dg.cpp  dg.hpp  dg_dim1.cpp  field.cpp  for_each.cpp  ghosting.cpp  grid3.cpp  integrator.cpp  mesh.cpp  partitioning.cpp  print.cpp  reduce.cpp  stl.cpp  subgrid3.cpp  tree.cpp  tree_amr.cpp  tree_uniform.cpp  vec.cpp  vec3.cpp
theory/: dg.html  theory.html  transfer.html  trees.html
unit/: CMakeLists.txt  amr.cpp  base64.cpp  basis.cpp  block_info.cpp  border.cpp  bounds.cpp  box3.cpp  cartesian.cpp  coverage.sh  defines.cpp  dg.cpp  dg_dim1.cpp  dg_dim2.cpp  dg_dim3.cpp  ex.stl  field.cpp  file.cpp  grid.cpp  grid3.cpp  integrator.cpp  interpolate.cpp  main.cpp  mesh.cpp  partitioning.cpp  search.cpp  spatial.cpp  stl.cpp  subgrid3.cpp  tree.cpp  tree_amr.cpp  tree_uniform.cpp  unit_tests.cpp  vec.cpp  vec3.cpp  view.cpp  when.cpp
usage/: usage.html
util/: CMakeLists.txt  stl.cpp
